examples/ok/io_read_file.hax
module examples::io_read_file;

import std::prelude;
import std::core::Result as Result;

pub sub main() -> Void {
  var Result::Result[Str, std::io::IoError] $r = std::io::read_file("README.md");

  case ($r) {
    when Ok(Str $s) {
      std::io::print($s);
    }
    when Err(std::io::IoError $e) {
      std::io::eprint("read_file failed\n");
    }
  }

  println("io_read_file ok");
}
