examples/fail/unreachable_case_scrut_never.hax
module examples::unreachable_case_scrut_never;

import std::prelude;
import std::core::Option as Option;

pub sub main() -> Void {
  var Option::Option[Int] $x = Option::None;

  case (panic("boom")) {
    when Some(Int $n) {
      println("unreachable arm");
      println("also unreachable arm");
    }
    when None {
      println("unreachable arm 2");
    }
  }

  println("unreachable after case");
}
